--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "express-validator": "^7.3.1",
     "express-ws": "^5.0.2",
     "jsonwebtoken": "^9.0.2",
+    "mic": "^2.1.2",
     "mongoose": "^8.7.0",
     "multer": "^2.0.2",
     "openai": "^6.21.0",
+    "speaker": "^0.5.5",
     "ws": "^8.19.0"
   }
 }
