--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^10.0.6",
     "tailwind-merge": "2.5.4",
     "tailwindcss-animate": "1.0.7"
   },
